[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scenes/QuitButton.gd" type="Script" id=1]
[ext_resource path="res://Assets/Gamer.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/QuitButtonUnressed.png" type="Texture" id=3]
[ext_resource path="res://Assets/QuitButtonPressed.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": false,
"name": "default",
"speed": 0.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": false,
"name": "press",
"speed": 0.0
} ]

[node name="Panel" type="Panel"]
pause_mode = 2
self_modulate = Color( 1, 1, 1, 0 )
margin_right = 16.0
margin_bottom = 16.0

[node name="Quit Button" type="Node2D" parent="."]
script = ExtResource( 1 )

[node name="Label" type="Label" parent="Quit Button"]
margin_left = 17.0
margin_right = 39.0
margin_bottom = 29.0
custom_fonts/font = SubResource( 1 )
text = "Back
"

[node name="Sprite" type="AnimatedSprite" parent="Quit Button"]
position = Vector2( 8, 8 )
frames = SubResource( 2 )
playing = true

[connection signal="gui_input" from="." to="Quit Button" method="_on_Panel_gui_input"]
[connection signal="mouse_entered" from="." to="Quit Button" method="_on_Panel_mouse_entered"]
[connection signal="mouse_exited" from="." to="Quit Button" method="_on_Panel_mouse_exited"]
